fix: overflow hidden for body

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -17,10 +17,7 @@ body {
 	font-weight: $font-weight-normal;
 	line-height: $line-height-default;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-
-	@media (max-width: 1600px) {
-		overflow-x: hidden;
-	}
+	overflow-x: hidden;
 }
 
 .home .AppContainer {
